--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="election.js"></script>
   </head>
-  <body>
+  <body id="body">
     <!-- I'm ready, I'm ready, I'm ready! -->
   </body>
 </html>
